<resources>
    <string name="app_name">Diplom_PDR</string>
    <string name="rules">Правила</string>
    <string name="drive">Водіння</string>
    <string name="tests">Тести</string>
    <string name="profile">Профіль</string>
    <string name="question_of_day">Питання дня</string>
    <string name="all_themes">Всі теми</string>
    <string name="rand_questions">20 випадкових питань</string>
    <string name="favorite_questions">Обрані питання</string>
    <string name="stats">Статистика</string>
    <string name="start">Старт</string>
    <string name="pause">Пауза</string>
    <string name="stop">Стоп</string>
    <string name="drive_rules">Правила дорожнього руху</string>
    <string name="general_terms">1. Загальні положення</string>
    <string name="right_drivers">2. Обов\'язки і права водіїв механічних транспортних засобів</string>
    <string name="movement_of_vehicles_with_special_signals">3. Рух транспортних засобів зі спеціальними сигналами</string>
    <string name="responsibilities_and_rights_of_pedestrians">4. Обов\'язки та права пішоходів</string>
    <string name="responsibilities_and_rights_of_passengers">5. Обов\'язки та права пасажирів</string>
    <string name="requirements_for_cyclists">6. Вимоги до велосипедистів</string>
    <string name="requirements_for_persons_driving_horse_drawn">7. Вимоги до осіб, які керують гужовим транспортом та погоничів тварин</string>
    <string name="traffic_regulation">8. Регулювання дорожнього руху</string>
    <string name="warning_signals">9. Попереджувальні сигнали</string>
    <string name="starting_a_movement_and_changing_its_direction">10. Початок руху та зміна його напрямку</string>
    <string name="location_of_vehicles_on_the_road">11. Розташування транспортних засобів на дорозі</string>
    <string name="speed_of_movement">12. Швидкість руху</string>
    <string name="distance_interval_oncoming_traffic">13. Дистанція, інтервал, зустрічний роз\'їзд</string>
    <string name="overtaking">14. Обгін</string>
    <string name="stopping_and_parking">15. Зупинка та стоянка</string>
    <string name="passing_intersections">16. Проїзд перехресть</string>
    <string name="advantages_of_route_vehicles">17. Переваги маршрутних транспортних засобів</string>
    <string name="passing_pedestrian_crossings_and_vehicle_stops">18. Проїзд пішохідних переходів та зупинок транспортних засобів</string>
    <string name="use_of_external_lighting_devices">19. Користування зовнішніми світловими приладами</string>
    <string name="moving_through_railroad_crossings">20. Рух через залізничні переїзди</string>
    <string name="passenger_transportation">21. Перевезення пасажирів</string>
    <string name="cargo_transportation">22. Перевезення вантажу</string>
    <string name="towing_and_operation_of_transport_trains">23. Буксирування та експлуатація транспортних составів</string>
    <string name="training_ride">24. Навчальна їзда</string>
    <string name="movement_of_vehicles_in_columns">25. Рух транспортних засобів у колонах</string>
    <string name="traffic_in_residential_and_pedestrian_areas">26. Рух у житловій та пішохідній зоні</string>
    <string name="driving_on_highways_and_roads_for_cars">27. Рух по автомагістралях і дорогах для автомобілів</string>
    <string name="driving_on_mountain_roads_and_steep_descents">28. Рух по гірських дорогах і на крутих спусках</string>
    <string name="international_movement">29. Міжнародний рух</string>
    <string name="number_plates_identification_marks_inscriptions_and_designations">30. Номерні, розпізнавальні знаки, написи та позначення</string>
    <string name="technical_condition_of_vehicles_and_their_equipment">31. Технічний стан транспортних засобів та їх обладнання</string>
    <string name="some_issues_of_road_traffic_organization_that_need_to_be_coordinated">32. Окремі питання організації дорожнього руху, що потребують узгодження</string>
    <string name="road_signs">33. Дорожні знаки</string>
    <string name="road_markings">34. Дорожня розмітка</string>
    <string name="current_speed">Поточна швидкість</string>
    <string name="max_speed_s">Max \n%sкм/год</string>
    <string name="road_s">Шлях \n%sкм</string>
    <string name="s_km">%sкм</string>
    <string name="next">Далі</string>
    <string name="desc_distance">Дистанція поїздки</string>
    <string name="desc_average_distance">Середня швидкість поїздки</string>
    <string name="s_km_hour">%s\nкм/год</string>
    <string name="desc_excessive_speed">Середня кількість перевищень швидкості</string>
    <string name="desc_emergency_down">Кільність екстренних гальмувать</string>
    <string name="global_stats">Загальна статистика</string>
    <string name="reset_progress">Скинути прогресс</string>
    <string name="average_desc_distance">Середня довжина поїздки</string>
    <string name="desc_average_emergency_down">Середня кільність екстренних гальмувать</string>
    <string name="current_split">Поточний відрізок</string>
    <string name="current_rating">Поточний рейтинг</string>
    <string name="trips">Поїзки</string>
    <string name="rewards">Винагороди</string>
    <string name="faq">FAQ</string>
    <string name="all_tests_complete">всього пройдено тестів</string>
    <string name="percent_right_answers">відсоток правильних відповідей</string>
    <string name="count_right_answers">к-ть правильних відповідей</string>
    <string name="count_fail_answers">к-ть не правильних відповідей</string>
    <string name="total_test_time">загальний час тестування</string>
    <string name="right_answers">Правильних відповідей</string>
    <string name="all_questions">Усього питань</string>
    <string name="continues">Продовжити</string>
    <string name="question">Питання</string>
    <string name="tasks_completed">Тестування завершено</string>
    <string name="average_excessive_speed">Середня кількість прискореннь</string>
    <string name="over_20">Кількість перевищень швидкості</string>
    <string name="over_speed">Кількість різких прискорень</string>
    <string name="is_delete_data">Точно видалити дані?</string>
    <string name="allert">ПОПЕРЕДЖЕННЯ</string>
</resources>