<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diplom.diplom_pdr.presentation.screens.AverageStatsScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_distance"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingVertical="20dp"
                        android:text="@string/s_km"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_desc_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/average_desc_distance"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_distance"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_average_distance"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_average_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingVertical="20dp"
                        android:text="@string/s_km_hour"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_desc_average_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_average_distance"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_average_distance"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_over_20"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_over_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="35sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_desc_over_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_excessive_speed"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_over_20"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_emergency_slow_down"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_emergency_slow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="35sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_desc_emergency_slow_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_average_emergency_down"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_emergency_slow_down"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_excessive_speed"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_excessive_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="35sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_desc_excessive_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/average_excessive_speed"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_excessive_speed"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>